# AutoGrad

./: .gitignore  CMakeLists.txt
.github/workflows/: ccpp.yml
docker/: Dockerfile.remote-cpp-env
include/: CPPPrinter.h  IR.h  IRMutator.h  IRPrinter.h  IRVisitor.h
project1/: CMakeLists.txt
project1/kernels/: kernel_example.cc
project1/solutions/: CMakeLists.txt  CPPPrinter.cc  CPPPrinter.h  grammar.y  parser.h  signPrinter.cc  signPrinter.h  solution.cc  token.l
project1/solutions/test_main/: parser_main.cc  test_cpp_printer.cc
project1/solutions/utils/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  base.h  base_utils.h  lock.h  logging.cpp  logging.h
project2/: CMakeLists.txt  report2.md
project2/solution/: AutoDiffer.cpp  AutoDiffer.h  CMakeLists.txt  IRHelperFunc.cpp  IRHelperFunc.h  IRPolisher.cpp  IRPolisher.h  IRcppPrinter.cpp  IRcppPrinter.h  IndexAnalyst.cpp  IndexAnalyst.h  IndexReplacer.cpp  IndexReplacer.h  arith.cpp  arith.h  signPrinter2.cc  signPrinter2.h  solution2.cc
project2/solution/Google_tests/: ArithTest.cpp  AutoDifferTest.cpp  BaseTest.h  CMakeLists.txt  IRPolisherTest.cpp
project2/solution/utils/: aixlog.hpp  debug_assert.hpp
report/: project1.md
src/: CPPPrinter.cc  IR.cc  IRMutator.cc  IRPrinter.cc  IRVisitor.cc
